--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link href="layout.css" rel="stylesheet">
+        <title>JLong: Welcome Page</title>
+    </head>
 
-<head>
-    <link href="layout.css" rel="stylesheet">
-    <title>JLong: Welcome Page</title>
-</head>
-<body>
-        <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
-</body>
+    <body>
+        <Header>
+            <h1>JLong: Welcome</h1>
+        </Header>
+        <article id="aboutus">
+            <h1>About Us</h1>
+        </article>
+    </body>
 
 </html>
